; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_see.c_hash_del_pre_extension.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_see.c_hash_del_pre_extension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.see_pre_extension_expr = type { %struct.see_pre_extension_expr*, %struct.see_pre_extension_expr*, %struct.see_pre_extension_expr* }
%struct.see_occr = type { %struct.see_occr*, %struct.see_occr*, %struct.see_occr* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @hash_del_pre_extension to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hash_del_pre_extension(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.see_pre_extension_expr*, align 8
  %4 = alloca %struct.see_occr*, align 8
  %5 = alloca %struct.see_occr*, align 8
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.see_pre_extension_expr*
  store %struct.see_pre_extension_expr* %7, %struct.see_pre_extension_expr** %3, align 8
  %8 = load %struct.see_pre_extension_expr*, %struct.see_pre_extension_expr** %3, align 8
  %9 = getelementptr inbounds %struct.see_pre_extension_expr, %struct.see_pre_extension_expr* %8, i32 0, i32 2
  %10 = load %struct.see_pre_extension_expr*, %struct.see_pre_extension_expr** %9, align 8
  %11 = bitcast %struct.see_pre_extension_expr* %10 to %struct.see_occr*
  store %struct.see_occr* %11, %struct.see_occr** %4, align 8
  store %struct.see_occr* null, %struct.see_occr** %5, align 8
  br label %12

12:                                               ; preds = %15, %1
  %13 = load %struct.see_occr*, %struct.see_occr** %4, align 8
  %14 = icmp ne %struct.see_occr* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %12
  %16 = load %struct.see_occr*, %struct.see_occr** %4, align 8
  %17 = getelementptr inbounds %struct.see_occr, %struct.see_occr* %16, i32 0, i32 0
  %18 = load %struct.see_occr*, %struct.see_occr** %17, align 8
  store %struct.see_occr* %18, %struct.see_occr** %5, align 8
  %19 = load %struct.see_occr*, %struct.see_occr** %4, align 8
  %20 = bitcast %struct.see_occr* %19 to %struct.see_pre_extension_expr*
  %21 = call i32 @free(%struct.see_pre_extension_expr* %20)
  %22 = load %struct.see_occr*, %struct.see_occr** %5, align 8
  store %struct.see_occr* %22, %struct.see_occr** %4, align 8
  br label %12

23:                                               ; preds = %12
  %24 = load %struct.see_pre_extension_expr*, %struct.see_pre_extension_expr** %3, align 8
  %25 = getelementptr inbounds %struct.see_pre_extension_expr, %struct.see_pre_extension_expr* %24, i32 0, i32 1
  %26 = load %struct.see_pre_extension_expr*, %struct.see_pre_extension_expr** %25, align 8
  %27 = bitcast %struct.see_pre_extension_expr* %26 to %struct.see_occr*
  store %struct.see_occr* %27, %struct.see_occr** %4, align 8
  br label %28

28:                                               ; preds = %31, %23
  %29 = load %struct.see_occr*, %struct.see_occr** %4, align 8
  %30 = icmp ne %struct.see_occr* %29, null
  br i1 %30, label %31, label %39

31:                                               ; preds = %28
  %32 = load %struct.see_occr*, %struct.see_occr** %4, align 8
  %33 = getelementptr inbounds %struct.see_occr, %struct.see_occr* %32, i32 0, i32 0
  %34 = load %struct.see_occr*, %struct.see_occr** %33, align 8
  store %struct.see_occr* %34, %struct.see_occr** %5, align 8
  %35 = load %struct.see_occr*, %struct.see_occr** %4, align 8
  %36 = bitcast %struct.see_occr* %35 to %struct.see_pre_extension_expr*
  %37 = call i32 @free(%struct.see_pre_extension_expr* %36)
  %38 = load %struct.see_occr*, %struct.see_occr** %5, align 8
  store %struct.see_occr* %38, %struct.see_occr** %4, align 8
  br label %28

39:                                               ; preds = %28
  %40 = load %struct.see_pre_extension_expr*, %struct.see_pre_extension_expr** %3, align 8
  %41 = call i32 @free(%struct.see_pre_extension_expr* %40)
  ret void
}

declare dso_local i32 @free(%struct.see_pre_extension_expr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
